applications/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web
  namespace: default
  labels:
    app.kubernetes.io/name: nginx-web
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nginx-web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
